<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ConfigOutputsWidgetClass</class>
 <widget class="QWidget" name="ConfigOutputsWidgetClass">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>775</width>
    <height>535</height>
   </rect>
  </property>
  <layout class="QVBoxLayout" name="outputsLayout">
   <property name="topMargin">
    <number>0</number>
   </property>
   <item>
    <widget class="QLabel" name="labelTitle">
     <property name="text">
      <string notr="true">Outputs</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QLabel" name="labelNoOutputsMessage">
     <property name="text">
      <string>No output available</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QStackedWidget" name="stacked"/>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
